ashu-images/deploy-app-k8s/a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: d1
  name: d1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: d1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: d1
    spec:
      imagePullSecrets:
      - name: sec1
      containers:
      - image: quay.io/niladri15/niladri15/nil-customer:appv1
        name: nil-customer
        ports:
        - containerPort: 80
        resources: {}
status: {}
