ashu-images/deploy-app-k8s/final_lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-final-app
  name: ashulb2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ashu-final-app
  type: LoadBalancer
status:
  loadBalancer: {}
