ashu-images/deploy-app-k8s/newsvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-dep1
  name: ashulb2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ashu-dep1
  type: NodePort
status:
  loadBalancer: {}
